manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: catfacts
  namespace: cbull
  labels:
    app: catfacts
spec:
  ports:
  - port: 5001
    protocol: TCP
    targetPort: 5001
  selector:
    app: catfacts
  sessionAffinity: None
  type: ClusterIP
